--- a/frontEnd-lawSystem/LawyerRegistration/indexLawyer.html
+++ b/frontEnd-lawSystem/LawyerRegistration/indexLawyer.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Client Registration</title>
-    <link rel="stylesheet" href="client.css">
+    <title>Lawyer Registration</title>
+    <link rel="stylesheet" href="lawyer.css">
 </head>
 <body>
     <div class="navbar">
@@ -18,21 +18,25 @@
         <div class="container">
             <div class="headerForm">
                 <img src="/Images/Logo.jpg" alt="Logo Mendes Miranda" class="logo">
-                <h1>Cadastro de Clientes</h1>
+                <h1>Cadastro de Advogados</h1>
             </div>
-            <div class="form-container">
-                <form id="clientForm">
+            <div class="form-container" id="flex-300">
+                <form id="lawyerForm">
                     <div class="form-group">
                         <label for="name">Nome:</label>
                         <input type="text" id="name" name="name" required>
                     </div>
                     <div class="form-group">
-                        <label for="cpf">CPF:</label>
-                        <input type="text" id="cpf" name="cpf" required>
+                        <label for="oabNumber">OAB:</label>
+                        <input type="text" id="oabNumber" name="oabNumber" required>
                     </div>
                     <div class="form-group">
-                        <label for="cep">CEP:</label>
-                        <input type="text" id="cep" name="cep" required>
+                        <label for="area">Área de atuação:</label>
+                        <select id="area" name="area">
+                            <option value="Trabalhista">Trabalhista</option>
+                            <option value="Civil">Civil</option>
+                            <option value="Previdenciario">Previdenciário</option>
+                        </select>
                     </div>
                     <div class="form-group">
                         <label for="email">Email:</label>
@@ -50,10 +54,12 @@
             </div>
         </div>
     </div>
+
     <footer>
         <p>&copy; 2024 Escritório de Advocacia</p>
         <p>Contato: suporte@advocacia.com</p>
     </footer>
-    <script src="clientForm.js"></script>
+    
+    <script src="lawyerForm.js"></script>
 </body>
 </html>
