--- a/frontEnd-lawSystem/Login/login.html
+++ b/frontEnd-lawSystem/Login/login.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <div class="login-container">
-        <div class="header">
-        </div>
+    <div class="navbar">
+        <img src="/Images/Logo.jpg" alt="Logo Mendes Miranda" class="logo">
+        <a href="#home">Home</a>
+        <a href="#about">Sobre</a>
+        <a href="#services">Serviços</a>
+        <a href="#contact">Contato</a>
+    </div>
+    <div class="login-container"> 
         <div class="login-box">
             <h1>Login</h1>
             <form action="/login" method="post">
@@ -31,16 +36,6 @@
             </form>
         </div>
     </div>
-<script>
-    document.querySelector('form').addEventListener('submit', function(event) {
-        var login = document.getElementById('login').value;
-        var password = document.getElementById('password').value;
-
-        if (login === '' || password === '') {
-            alert('Please, enter the all camps.');
-            event.preventDefault();// Evita o envio do formulario;
-        }
-    });
 </script>
 </body>
 </html>
