--- a/frontEnd-lawSystem/Login/login.html
+++ b/frontEnd-lawSystem/Login/login.html
@@ -16,26 +16,34 @@
     </div>
     <div class="login-container"> 
         <div class="login-box">
-            <h1>Login</h1>
-            <form action="/login" method="post">
-                <label for="login">Login:</label>
-                <input type="text" id="login" name="login" required>
+            <div class="card-Login">
+                <h1>Login</h1>
+                <form action="/login" method="post">
+                    <label for="login">Login:</label>
+                    <input type="text" id="login" name="login" required>
 
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required>
+            
+                    <div class="actions">
+                        <a href="#">Esqueci minha senha</a>
+                        <a href="#">Cadastrar-se</a>
+                    </div>
 
-                <div class="actions">
-                    <a href="#">Esqueci minha senha</a>
-                    <a href="#">cadastra-se</a>
-                </div>
-
-                <div class="buttons">
-                    <button type="submit">Login</button>
-                    <button type="button" onclick="window.location.href='/'">Cancelar</button>
-                </div>
-            </form>
+                    <div class="buttons">
+                        <button type="submit">Login</button>
+                        <button type="button" onclick="window.location.href='/'">Cancelar</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
+
+    <footer>
+        <p>&copy; 2024 Escritório de Advocacia</p>
+        <p>Contato: mendesmiranda@adv.com</p>
+    </footer>
+    
     <script src="login.js"></script>
 </body>
 </html>
