--- a/frontEnd-lawSystem/HomePages/HomeLawyer/indexHomeLawyer.html
+++ b/frontEnd-lawSystem/HomePages/HomeLawyer/indexHomeLawyer.html
@@ -35,7 +35,7 @@
                     </ul>
                 </li>   
                 <li><a href="#">Perfil</a></li>
-                <li><a href="#">Sair</a></li>
+                <li><a href="#" id="logout">Sair</a></li>
             </ul>
         </nav>
 
